--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -10,6 +10,9 @@
         "jsxImportSource": "solid-js",
         "types": ["vite/client"],
         "noEmit": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "paths": {
+            "@/*": ["./src/*"] //配置项目根目录
+        }
     }
 }
