perf(client): 优化实时定位

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "vite",
-        "dev": "vite",
+        "dev": "vite  --host",
         "build": "vite build",
         "serve": "vite preview"
     },
