--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@solidjs/router": "^0.13.3",
-    "solid-js": "^1.8.11",
+    "@world-you-past/models": "workspace:^",
     "@world-you-past/shared": "workspace:^",
-    "@world-you-past/models": "workspace:^"
+    "solid-js": "^1.8.11",
+    "solid-transition-group": "^0.2.3"
   }
 }
