--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,6 +2,7 @@
     "name": "@world-you-past/client",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "dev": "vite  --host",
