--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@world-you-past/models": "workspace:^",
     "@world-you-past/shared": "workspace:^",
     "solid-js": "^1.8.11",
+    "solid-toast": "^0.5.0",
     "solid-transition-group": "^0.2.3"
   }
 }
