--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,15 +1,18 @@
 {
-    "name": "@world-you-past/client",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "main": "index.js",
-    "scripts": {
-        "dev": "vite  --host",
-        "build": "vite build",
-        "serve": "vite preview"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+  "name": "@world-you-past/client",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite  --host",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "less": "^4.2.0"
+  }
 }
