build(server):启用elysia和连接mongodb

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,17 +1,19 @@
 {
     "name": "@world-you-past/server",
-    "version": "1.0.0",
-    "description": "",
+      "version": "1.0.0",
+      "description": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "bun run --watch src/index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "bun-types": "latest"
-    },
     "dependencies": {
-        "elysia": "latest"
-    }
-}
+      "elysia": "latest"
+    },
+    "devDependencies": {
+      "bun-types": "latest"
+    },
+    "module": "src/index.js"
+  }
