--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,19 +1,19 @@
 {
     "name": "@world-you-past/server",
-      "version": "1.0.0",
-      "description": "",
+    "version": "1.0.0",
+    "description": "",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "bun run --watch src/index.ts"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "bun run --watch src/index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "elysia": "latest"
+        "elysia": "latest",
+        "mongoose": "^8.3.4"
     },
     "devDependencies": {
-      "bun-types": "latest"
-    },
-    "module": "src/index.js"
-  }
+        "bun-types": "latest"
+    }
+}
