build(server):补充了model部分，和一部分数据库相关，添加了socketio但并未使用

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "elysia": "latest",
-        "mongoose": "^8.3.4"
+        "mongoose": "^8.3.4",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "bun-types": "latest"
