--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "@hello-world-js/world-you-past",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "MIT",
-    "workspaces": [
-        "packages/*"
-    ],
-    "devDependencies": {
-        "@amap/amap-jsapi-types": "^0.0.15",
-        "@types/node": "^20.12.7",
-        "autoprefixer": "^10.4.19",
-        "daisyui": "^4.10.1",
-        "postcss": "^8.4.38",
-        "solid-devtools": "^0.29.2",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.11",
-        "vite-plugin-css-injected-by-js": "^3.5.0",
-        "vite-plugin-solid": "^2.8.2"
-    },
-    "dependencies": {
-        "@amap/amap-jsapi-loader": "^1.0.1",
-        "@solidjs/router": "^0.13.3",
-        "@world-you-past/models": "workspace:^",
-        "@world-you-past/shared": "workspace:^",
-        "solid-js": "^1.8.11",
-        "solid-toast": "^0.5.0",
-        "solid-transition-group": "^0.2.3"
-    }
+  "name": "@hello-world-js/world-you-past",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@amap/amap-jsapi-types": "^0.0.15",
+    "@types/node": "^20.12.7",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.1",
+    "postcss": "^8.4.38",
+    "solid-devtools": "^0.29.2",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-css-injected-by-js": "^3.5.0",
+    "vite-plugin-solid": "^2.8.2"
+  },
+  "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "@solidjs/router": "^0.13.3",
+    "@world-you-past/models": "workspace:^",
+    "@world-you-past/shared": "workspace:^",
+    "nanoid": "^5.0.7",
+    "solid-js": "^1.8.11",
+    "solid-toast": "^0.5.0",
+    "solid-transition-group": "^0.2.3"
+  }
 }
