--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@solidjs/router": "^0.13.3",
     "@world-you-past/models": "workspace:^",
     "@world-you-past/shared": "workspace:^",
+    "axios": "^1.6.8",
     "nanoid": "^5.0.7",
     "solid-js": "^1.8.11",
     "solid-toast": "^0.5.0",
